# github-trends-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  github_client.py  main.py  pyproject.toml  server.py  tracker.py
tests/: __init__.py  test_github_client.py  test_server_logging.py  test_tracker.py
