[project]
name = "github-trends-mcp"
version = "0.1.0"
description = "MCP server exposing GitHub trending repositories and repo details to AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Remigiusz", email = "264867228+remigiuszdabrowski104-png@users.noreply.github.com" }]
keywords = ["mcp", "model-context-protocol", "github", "trending", "ai-agents", "claude"]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
    "scrapling>=0.4.8",
]

[project.urls]
Homepage = "https://github.com/remigiuszdabrowski104-png/github-trends-mcp"
Repository = "https://github.com/remigiuszdabrowski104-png/github-trends-mcp"
Issues = "https://github.com/remigiuszdabrowski104-png/github-trends-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"



